--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -16,12 +16,12 @@
         android:layout_above="@+id/scrollView3" />
 
     <ScrollView
+        android:id="@+id/scrollView3"
         android:layout_width="wrap_content"
-        android:layout_height="160dp"
+        android:layout_height="200dp"
         android:layout_alignParentBottom="true"
         android:layout_alignParentEnd="true"
-        android:layout_alignParentStart="true"
-        android:id="@+id/scrollView3">
+        android:layout_alignParentStart="true">
 
         <TableLayout
             android:id="@+id/table_CapInfo"
